--- a/practica06/index.html
+++ b/practica06/index.html
@@ -5,20 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-
-
-
-    </style>
-    <script>
-
-
-
-    </script>
 </head>
 <body>
-    
-    
-
+    <form action="http://localhost:4567/" method="post">
+        <input id="email" type="text" placeholder="email">
+        <input id="password" type="text" placeholder="Paswword">
+        <button id="">enviar</button>
+    </form>
 </body>
 </html>
